TASK:9.1: layout bug

--- a/src/pages/DisplayCoin/components/MarketOverview/MarketOverview.module.scss
+++ b/src/pages/DisplayCoin/components/MarketOverview/MarketOverview.module.scss
@@ -5,7 +5,6 @@
     align-items: center;
     background-color: #001a2c;
     height: 100vh;
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(6,29,33,0.8995973389355743) 100%);
 }
 
 .body {
@@ -118,5 +117,5 @@ td {
 
 .talbeScroll {
     overflow-y: auto;
-    height: 850px;
+    height: 409px;
 }
